# Forensics-Copilot

./: .gitignore  README.md  forensics-copilot.spec  pyproject.toml  run.py  sample_generator.py
forensics_copilot/: analyzer.py  anomalies.py  cli.py  execute.py  extract.py  flagscan.py  identify.py  model.py  report.py  suggest.py
sample_data/: notes.txt
src/forensics_copilot/: analyzer.py  cli.py  execute.py  identify.py  model.py  report.py  suggest.py
src/forensics_copilot/analyzers/: __init__.py  anomalies.py
tests/: fixtures.py  test_analyzer.py  test_audio.py  test_cli_interactive.py  test_execute.py
