[project]
name = "forensics-copilot"
version = "0.1.0"
description = "Automated analysis and suggestion tool for CTF forensics challenges"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Weibo Lin" },
]
dependencies = [
    "python-magic>=0.4.27; platform_system != 'Windows'",
    "python-magic-bin>=0.4.14; platform_system == 'Windows'",
]

[project.scripts]
forensics-copilot = "forensics_copilot.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["forensics_copilot*"]